; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_nfa.c_carcsort.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_nfa.c_carcsort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.carc = type { i32 }

@carc_cmp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.carc*, i64)* @carcsort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @carcsort(%struct.carc* %0, i64 %1) #0 {
  %3 = alloca %struct.carc*, align 8
  %4 = alloca i64, align 8
  store %struct.carc* %0, %struct.carc** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp ugt i64 %5, 1
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load %struct.carc*, %struct.carc** %3, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i32, i32* @carc_cmp, align 4
  %11 = call i32 @qsort(%struct.carc* %8, i64 %9, i32 4, i32 %10)
  br label %12

12:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @qsort(%struct.carc*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
